Basic CSS Added

--- a/PieChart.html
+++ b/PieChart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Cancer Types</title>
-    <link rel="stylesheet" href="PieChart.css">
+    <link rel="stylesheet" href="Styles\PieChart.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
@@ -24,5 +24,11 @@
     </div>
     <div id="commonLegend" class="common-legend"></div>
     <script src="PieChart.js"></script>
+	
+    <br>
+    <br>
+    <footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
+
 </body>
 </html>
+
