--- a/linegraph.html
+++ b/linegraph.html
@@ -6,61 +6,10 @@
     <meta name="description" content="Data Visualisation" />
     <meta name="keywords" content="HTML, CSS, D3" />
     <meta name="author" content="Ashraf Toor" />
+	<link rel="stylesheet" href="Styles\linegraph.css">
     <title>Line Graph</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <style>
-        .area {
-            fill: lightblue;
-            opacity: 0.7;
-        }
-
-        .line {
-            fill: none;
-            stroke-width: 2px;
-        }
-
-        .halfMilMark {
-            stroke: red;
-            stroke-dasharray: 5, 5;
-        }
-
-        .halfMilLabel {
-            fill: red;
-            font-size: 12px;
-        }
-
-        .axis text {
-            font-size: 12px;
-        }
-
-        .axis path,
-        .axis line {
-            fill: none;
-            stroke: black;
-            shape-rendering: crispEdges;
-        }
-
-        .tooltip {
-            position: absolute;
-            text-align: center;
-            width: auto;
-            padding: 5px;
-            font: 12px sans-serif;
-            background: lightsteelblue;
-            border: 0;
-            border-radius: 5px;
-            pointer-events: none;
-            display: none;
-        }
-
-        .mouse-over-dot {
-            fill: orange;
-            stroke: darkorange;
-            stroke-width: 2px;
-            r: 5;
-            display: none;
-        }
-    </style>
+    
 </head>
 
 <body>
@@ -287,7 +236,7 @@
 
     <br>
     <br>
-    <footer style="color:grey">COS30045 Data Visualisation<br>Joe Bloggs</footer>
+    <footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
 
 </body>
 
