--- a/stackedbarchart.html
+++ b/stackedbarchart.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Data Visualisation"/>
     <meta name="keywords" content="HTML, CSS, D3"/>
     <meta name="author" content="Ashraf Toor"/>
+	<link rel="stylesheet" href="Styles\stackedbarchart.css">
     <title>Stacked Bar Chart</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <style>
@@ -280,7 +281,7 @@
 
     <br>
     <br>
-    <footer style="color:grey">COS30045 Data Visualisation<br>Joe Bloggs</footer>
+    <footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
 
 </body>
 </html>
