--- a/story.html
+++ b/story.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How to Reduce Cancer Mortality Rates</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Styles\story.css">
 </head>
 <body>
     <header>
@@ -80,9 +80,7 @@
             </ul>
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 Cancer Awareness Initiative</p>
-    </footer>
+	<footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
     <script src="script.js"></script>
 </body>
 </html>
