--- a/stackedbarchart.html
+++ b/stackedbarchart.html
@@ -9,33 +9,13 @@
 	<link rel="stylesheet" href="Styles\stackedbarchart.css">
     <title>Stacked Bar Chart</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <style>
-        .chart {
-            width: 800px;
-            height: 400px;
-            margin: 20px auto;
-        }
-        .tooltip {
-            position: absolute;
-            text-align: center;
-            padding: 5px;
-            font: 12px sans-serif;
-            background: #ffffff;
-            border: 1px solid #000000;
-            pointer-events: none;
-            opacity: 0;
-        }
-        .hidden {
-            display: none;
-        }
-    </style>
 </head>
 
 <body>
 
     <h1>Stacked Bar Chart</h1>
 
-    <div>
+    <div id="button-container">
         <button id="btn2017">2017</button>
         <button id="btn2019">2019</button>
     </div>
