--- a/linegraph.html
+++ b/linegraph.html
@@ -32,7 +32,7 @@
         var dataset; // Dataset
 
         // Load the data
-        d3.csv("Estimated_Deaths.csv", function (d) {
+        d3.csv("Data/Estimated_Deaths.csv", function (d) {
             return {
                 year: +d.Year,
                 country: d.Country,
