--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <h1>COS30045 - Data Visualisation</h1>
-        <h2>Global Health Wallet: Tracking Expenditure Across Borders</h2>
+        <h2>Unveiling Cancer Mortality Trends: A Data-Driven Approach to Improving Health Outcomes</h2>
         <button onclick="openBarGraph()"> Bar Graph </button>
         <button onclick="openLineGraph()"> Line Graph </button>
         <button onclick="openPieChart()"> Pie Chart </button>
