--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="container">
         <h1>COS30045 - Data Visualisation</h1>
         <h2>Unveiling Cancer Mortality Trends: A Data-Driven Approach to Improving Health Outcomes</h2>
-        <button onclick="openBarGraph()"> Bar Graph </button>
-        <button onclick="openLineGraph()"> Line Graph </button>
-        <button onclick="openPieChart()"> Pie Chart </button>
+        <button onclick="openBarGraph()"> Cancer Mortality Rates </button>
+        <button onclick="openLineGraph()"> Expected Deaths due to Cancer </button>
+        <button onclick="openPieChart()"> Main Types of Cancer Mortality </button>
         <button onclick="openCancerPrevention()"> How to prevent Cancer </button>
     </div>
     <footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
