--- a/PieChart.html
+++ b/PieChart.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="description" content="Data Visualisation"/>
+    <meta name="keywords" content="HTML, CSS, D3"/>
+    <meta name="author" content="Ashraf Toor & Layani Jayasinghe"/>
+	<link rel="stylesheet" href="Styles\PieChart.css">
     <title>Main Cancer Types</title>
-    <link rel="stylesheet" href="Styles\PieChart.css">
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
