--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Data Visualisation"/>
     <meta name="keywords" content="HTML, CSS, D3"/>
     <meta name="author" content="Ashraf Toor & Layani Jayasinghe"/>
-    <link rel="stylesheet" href="Styles\index.css">
+    <link rel="stylesheet" href="Styles/index.css">
     <title>Final Project - Data Visualisation</title>
 </head>
 
@@ -14,11 +14,20 @@
     <div class="container">
         <h1>COS30045 - Data Visualisation</h1>
         <h2>Unveiling Cancer Mortality Trends: A Data-Driven Approach to Improving Health Outcomes</h2>
-        <button onclick="openBarGraph()"> Cancer Mortality Rates </button>
-        <button onclick="openLineGraph()"> Expected Deaths due to Cancer </button>
-        <button onclick="openPieChart()"> Main Types of Cancer Mortality </button>
-        <button onclick="openCancerPrevention()"> How to prevent Cancer </button>
-    </div>
+        <div class="button-container">
+            <button onclick="openBarGraph()"> Cancer Mortality Rates </button>
+            <button onclick="openLineGraph()"> Expected Deaths due to Cancer </button>
+            <button onclick="openPieChart()"> Main Types of Cancer Mortality </button>
+            <button onclick="openCancerPrevention()"> How to prevent Cancer </button>
+        </div>
+		<br>
+		<br>
+		<br>
+		<p>Our motivation stems from the conviction that well-informed decision-making can lead to improved health outcomes. Through user-friendly visualizations, we aim to bridge the comprehension gap between complex data and actionable insights. Visual representations make it more accessible for a broader audience to grasp and engage with the information, empowering individuals to make informed choices regarding cancer prevention and treatment. Considering the challenges posed by the COVID-19 pandemic, understanding how</p>
+		<br>
+		<br>
+		<br>
+	</div>
     <footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
 
     <script>
