--- a/linegraph.html
+++ b/linegraph.html
@@ -7,14 +7,14 @@
     <meta name="keywords" content="HTML, CSS, D3" />
     <meta name="author" content="Ashraf Toor" />
 	<link rel="stylesheet" href="Styles\linegraph.css">
-    <title>Line Graph</title>
+    <title>Expected Deaths due to cancer</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     
 </head>
 
 <body>
 
-    <h1>Line Graph</h1>
+    <h1>Number of Expected Deaths in coming years due to Cancer</h1>
 
     <!-- Checkboxes for Country Selection -->
     <div id="countryCheckboxes"></div>
