--- a/stackedbarchart.html
+++ b/stackedbarchart.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8"/>
     <meta name="description" content="Data Visualisation"/>
     <meta name="keywords" content="HTML, CSS, D3"/>
-    <meta name="author" content="Ashraf Toor"/>
+    <meta name="author" content="Ashraf Toor & Layani Jayasinghe"/>
 	<link rel="stylesheet" href="Styles\stackedbarchart.css">
-    <title>Stacked Bar Chart</title>
+    <title>Cancer Mortality Rates</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 
 <body>
 
-    <h1>Stacked Bar Chart</h1>
+    <h1>Cancer Mortality Rates</h1>
 
     <div id="button-container">
         <button id="btn2017">2017</button>
