--- a/story.html
+++ b/story.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="description" content="Data Visualisation"/>
+    <meta name="keywords" content="HTML, CSS, D3"/>
+    <meta name="author" content="Ashraf Toor & Layani Jayasinghe"/>
+	<link rel="stylesheet" href="Styles\story.css">
     <title>How to Reduce Cancer Mortality Rates</title>
-    <link rel="stylesheet" href="Styles\story.css">
 </head>
 <body>
     <header>
@@ -80,6 +83,12 @@
             </ul>
         </section>
     </main>
+	<button onclick="return()" class="return"> Return to homepage </button>
+	<script>
+        function return() {
+            window.location.href = "index.html";
+        }
+	</script>
 	<footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
     <script src="script.js"></script>
 </body>
