--- a/story.html
+++ b/story.html
@@ -83,12 +83,7 @@
             </ul>
         </section>
     </main>
-	<button onclick="return()" class="return"> Return to homepage </button>
-	<script>
-        function return() {
-            window.location.href = "index.html";
-        }
-	</script>
+	<a class="return" href="index.html"> Return to Homepage</a>
 	<footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
 </body>
 </html>
