--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 		<br>
 		<br>
 		<br>
-		<p>Our motivation stems from the conviction that well-informed decision-making can lead to improved health outcomes. Through user-friendly visualizations, we aim to bridge the comprehension gap between complex data and actionable insights. Visual representations make it more accessible for a broader audience to grasp and engage with the information, empowering individuals to make informed choices regarding cancer prevention and treatment. Considering the challenges posed by the COVID-19 pandemic, understanding how</p>
+		<p>This website gives important information about cancer mortality in OECD nations. There are four primary 
+		aspects to our platform. The first aspect displays gender-specific cancer death rates for 2017 and 2021.
+		The second aspect of this website shows expected cancer death rates in coming years till 2050. 
+		The third aspect covers the main cancer types by gender in 2017, 2019 and 2021. The 
+		strategies for preventing cancer are also provided. Our mission is to provide easily 
+		available and useful information to the users. Our goal is to enhance global health outcomes by promoting informed 
+		decision-making through an understanding of cancer patterns and prevention techniques.</p>
 		<br>
 		<br>
 		<br>
