--- a/stackedbarchart.html
+++ b/stackedbarchart.html
@@ -261,6 +261,7 @@
 
     <br>
     <br>
+	<a class="return" href="index.html"> Return to Homepage</a>
     <footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
 
 </body>
