--- a/PieChart.html
+++ b/PieChart.html
@@ -17,6 +17,12 @@
         <button onclick="updateCharts('2019')">2019</button>
         <button onclick="updateCharts('2021')">2021</button>
     </div>
+	<p>This chart illustrates the types of cancer causing deaths among men and women for the years 2017, 2019, and 2021. 
+	Each pie chart is divided by gender, showcasing the distribution of cancer types such as lung, breast, colorectal, 
+	liver, and others. The color-coded sections represent different cancer types, allowing for a clear comparison between genders. 
+	Lung cancer appears to be a significant cause of death for both men and women, while breast cancer is more prevalent in women. 
+	Understanding gender-specific cancer mortality rates is made easier with the use of this visual representation, which also helps 
+	to allocate resources and prioritise public health initiatives.</p>
     <div class="charts">
         <div class="chart-container" id="womenChartContainer">
             <h2>Women</h2>
