Added brief description in charts

--- a/linegraph.html
+++ b/linegraph.html
@@ -15,7 +15,13 @@
 <body>
 
     <h1>Number of Expected Deaths in coming years due to Cancer</h1>
-
+	<p>This chart projects the number of expected deaths due to cancer in the coming years across various countries. 
+	Users can select specific countries to see their data trends. The graph includes Australia, Brazil, Canada, Germany, 
+	Japan, Korea, New Zealand, Poland, the United Kingdom, and the United States. The United States shows the highest 
+	projected increase in cancer deaths, surpassing 900,000 by 2050. The red line marks half a million deaths, providing 
+	a benchmark for comparison. A mouseover effect has also been added, so a exact estimated number can be seen in that year.
+	This visualization highlights the growing impact of cancer and underscores the importance of targeted interventions 
+	and resource allocation to address future healthcare challenges. </p>
     <!-- Checkboxes for Country Selection -->
     <div id="countryCheckboxes"></div>
 
@@ -236,6 +242,7 @@
 
     <br>
     <br>
+	<a class="return" href="index.html"> Return to Homepage</a>
     <footer>COS30045 Data Visualisation<br>Ashraf Toor - 104586656<br>Layani Jayasinghe - 104826310</footer>
 
 </body>
