--- a/stackedbarchart.html
+++ b/stackedbarchart.html
@@ -18,6 +18,11 @@
         <button id="btn2017">2017</button>
         <button id="btn2021">2021</button>
     </div>
+	<p>This interactive chart shows cancer death rates by gender for the years 2017 and 2021 across different countries. 
+	Users can select specific countries and genders to see the data. The bar graph includes countries like Brazil, Korea, 
+	Japan, the United States, Australia, Canada, Germany, New Zealand, the United Kingdom, and Poland. In the chart, orange 
+	represents women and blue represents men. This visualization helps understand cancer death trends, between countries,
+	and between genders, providing useful information for public health planning and resource allocation.</p>
 
     <h2 id="yearHeading" class="hidden"></h2>
 <div class= "center">
